--- a/static/portfolio/index.html
+++ b/static/portfolio/index.html
@@ -66,7 +66,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1> Vikas Chaubey</h1>
-      <p><span class="typed" data-typed-items="I Am a Software Developer, A Software Designer, I Build Software to Make a Difference"></span></p>
+      <p><span class="typed" data-typed-items="I am a software developer, A software designer, I build software to catalyze progressive change"></span></p>
       <div class="social-links">
 <!--        <a href="https://www.linkedin.com/in/vikas-chaubey-55448583" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>-->
 <!--        <a href="http://github.com/vikas-chaubey" target="_blank" class="github"><i class="bi-github"></i></a>-->
@@ -88,8 +88,8 @@
 
         <div class="section-title">
           <h2>About me</h2>
-          <p>Hello, I am a software development professional with total 3.5 years of industrial experience as Software developer in IT industry And 1.5 years of
-             work experience as software freelancer. I have expertise in backend development using JAVA, JEE and other technologies.Currently I am persuing my masters education in computer science at University of florida (class of Aug 2019 - May 2021) ,
+          <p>Hi,My name is Vikas and I am a software development professional with total 3.5 years of industrial experience as java software developer in IT industry And 1.5 years of
+             work experience as software freelancer. I have good experience in software backend development and web application development using JAVA, JEE and other technologies.Currently I am persuing  masters in computer science at University of florida (class of Aug 2019 - May 2021) ,
              I am graduating in May 2021 and i am actively looking for job opportunities and seeking a position into software development role , as a software engineer.
           </p>
         </div>
@@ -101,15 +101,15 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>Backend Software Developer</h3>
             <p class="fst-italic">
-                      &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; I beleive that any type of problem can be solved efficiently, we just have to try hard enough.
+                      &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; I believe that all problems can be solved efficiently, The key is just to try hard enough.
             </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
 <!--                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 May 1995</span></li>-->
 <!--                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>-->
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+1 352 870 4562</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Location:</strong> <span>USA</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Contact:</strong> <span>+1(352)-870-4562</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Current Location:</strong> <span>USA</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Open for Job Oppurtunities:</strong> <span>Yes</span></li>
 
                 </ul>
@@ -185,7 +185,7 @@
 
         <div class="section-title">
           <h2>Technical Skills</h2>
-          <p>Having worked in the IT industry for many years, i got opportunity to work in several big projects which exposed me to learn different technologies ,
+          <p>Having worked in the IT industry for many years, i got opportunity to work in several projects which gave me exposure to work and learn different technologies ,
             I have good experience in technologies like Java, Java Enterprise Edition(JEE), web services (REST and SOAP) , Apache Storm,
             Elastic Search , Kafka , MongoDB and frameworks like - Spring MVC ,spring boot and several other methodologies and tools.
           </p>
