--- a/static/portfolio/index.html
+++ b/static/portfolio/index.html
@@ -88,7 +88,7 @@
 
         <div class="section-title">
           <h2>About me</h2>
-          <p>Hi,My name is Vikas and I am a software development professional with total 3.5 years of industrial experience as java software developer in IT industry And 1.5 years of
+          <p>Hi,My name is Vikas and I am a software development professional with total 4 years of industrial experience as java software developer in IT industry And 1.5 years of
              work experience as software freelancer. I have good experience in software backend development and web application development using JAVA, JEE and other technologies.Currently I am persuing  masters in computer science at University of florida (class of Aug 2019 - May 2021) ,
              I am graduating in May 2021 and i am actively looking for job opportunities and seeking a position into software development role , as a software engineer.
           </p>
@@ -118,7 +118,7 @@
                 <ul>
 <!--                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>-->
                   <li><i class="bi bi-chevron-right"></i> <strong>Educational Background:</strong> <span> M.S.in Computer Science , B.E. in Electronics and Communications Eng.</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>vikas.chaubey113@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>vikas.chaubey391@gmail.com</span></li>
                 </ul>
               </div>
             </div>
@@ -287,7 +287,7 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>A result driven software development Professional having 3.5 years in IT industry , actively looking for full-time software engineering job opportunities.
+          <p>A result driven software development Professional having 4 years in IT industry , actively looking for full-time software engineering job opportunities.
         </div>
 
         <div class="row">
@@ -361,6 +361,24 @@ EaaSy Framework , Cloud , MicroServices, CI/CD , IOT etc..</li>
 
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
+              <div class="resume-item">
+              <h4>Software Engineer ,  Walmart Global Tech, Bentonville, Arkansas, USA</h4>
+              <h5> Dec 2021 - Present</h5>
+              <ul>
+                  <li>Technology Stack: Java, Spring Boot , Rest Web Services, Cassandra, Sql, Microsoft azure , AWS , WNCP, OneOps, Concord , Linux Shell </li>
+                <li>Control Tower (Monitoring Platform for Walmart Distribution Centers Across the Globe)
+                    Role : Currently working on the integration and development of various web applications for monitoring platform
+                    called control tower for Walmart distribution centers.</li>
+              </ul>
+            </div>
+              <div class="resume-item">
+              <h4>Research Assistant (Dept. of Chemical Engineering),  University of Florida, USA</h4>
+              <h5> June 2021 - Dec 2021</h5>
+              <ul>
+                <li>Developed applications to read and process physical experimental data from electronic sensors to achieve maximum
+accuracy in experimental outcomes. Worked on platforms like Matlab.</li>
+              </ul>
+            </div>
             <div class="resume-item">
               <h4>Software Engineer ,  Infrrd Pvt Ltd, Bengaluru, India</h4>
               <h5> May 2017 - June 2019</h5>
@@ -736,12 +754,12 @@ Role: Designed and developed application to automate the open text content serve
           <div class="col-lg-6">
             <div class="section-title">
               <section class="ownclass">
-                <h2>Leave a Message at the beep.</h2>
+                <h2>Contact:</h2>
             <div class="info">
               <div class="email">
 <!--                <i class="bi bi-envelope"></i>-->
                 <h4>Email:</h4>
-                <p>vikas.chaubey113@gmail.com</p>
+                <p>vikas.chaubey391@gmail.com</p>
               </div>
               <div class="phone">
 <!--                <i class="bi bi-phone"></i>-->
