--- a/static/portfolio/index.html
+++ b/static/portfolio/index.html
@@ -89,8 +89,8 @@
         <div class="section-title">
           <h2>About me</h2>
           <p>Hi,My name is Vikas and I am a software development professional with total 4 years of industrial experience as java software developer in IT industry And 1.5 years of
-             work experience as software freelancer. I have good experience in software backend development and web application development using JAVA, JEE and other technologies.Currently I am persuing  masters in computer science at University of florida (class of Aug 2019 - May 2021) ,
-             I am graduating in May 2021 and i am actively looking for job opportunities and seeking a position into software development role , as a software engineer.
+             work experience as software freelancer. I have good experience in software backend development and web application development using JAVA, Spring and other technologies.
+             I have completed my masters degree in computer science from university of florida in May 2021 and currently working in IT industry as a software engineer. I am actively looking for job change and seeking a position into software development roles , as a software engineer.
           </p>
         </div>
 
@@ -186,8 +186,8 @@
         <div class="section-title">
           <h2>Technical Skills</h2>
           <p>Having worked in the IT industry for many years, i got opportunity to work in several projects which gave me exposure to work and learn different technologies ,
-            I have good experience in technologies like Java, Java Enterprise Edition(JEE), web services (REST and SOAP) , Apache Storm,
-            Elastic Search , Kafka , MongoDB and frameworks like - Spring MVC ,spring boot and several other methodologies and tools.
+            I have good experience in technologies like Java, Java Enterprise Edition(JEE), web services (REST and SOAP) , Microservices, Apache Storm,
+            Elastic Search , Kafka , MongoDB , Cassandra and frameworks like - Spring MVC ,spring boot and several other methodologies and tools.
           </p>
         </div>
 
@@ -203,14 +203,14 @@
             </div>
 
             <div class="progress">
-              <span class="skill" STYLE="font-weight:bold">Frameworks : Spring, Web Services (SOAP & REST ), Spring Boot, Hibernate , Django <i class="val">90%</i></span>
+              <span class="skill" STYLE="font-weight:bold">Frameworks : Spring, SOAP & REST Services, Microservices , Spring Boot, Hibernate , Django <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill" STYLE="font-weight:bold">Database Systems :  Mongo-DB, Elastic Search ,Oracle DB , Mysql, SQL lite <i class="val">85%</i></span>
+              <span class="skill" STYLE="font-weight:bold">Database Systems :  Mongo-DB, Cassandra, Elastic Search ,Oracle DB , Mysql, SQL lite <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -308,58 +308,7 @@
               <p><em>IPS College of Technology & Management, gwalior (MP), India </em></p>
 <!--              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>-->
             </div>
-
-            <h3 class="resume-title">Academic Projects</h3>
-            <div class="resume-item">
-              <h4>Machine Learning and Pattern Recognition</h4>
-              <p><em>Projects done under supervision of Prof. Dapeng Vu and  Prof. Kejun Huang , (M.S.,UF) </em></p>
-               <ul>
-               <li> Implemented Object detection ML model using weakly supervised learning , convolution neural network , and Grad-Cam algorithm.</li>
-              </ul>
-            </div>
-            <div class="resume-item pb-0">
-              <h4>Distributed Operating Systems</h4>
-              <p><em>Projects done under supervision of Prof. Alin Dobra  (M.S. C.S.,UF)</em></p>
-               <ul>
-               <li>Implemented Gossip and Pastry Protocols , twitter API simulator, using F# and web sockets.This twitter simulator was designed to handle load of 10000 users on an average config machine</li>
-              </ul>
-            </div>
-            <div class="resume-item pb-0">
-              <h4> Advanced Data Structures</h4>
-              <p><em>Projects done under supervision of Prof. Sartaj Sahni (M.S. C.S.,UF)</em></p>
-              <ul>
-                <li>Developed City Planner System , and implemented Minheap and RedBlack tree from scratch..</li>
-              </ul>
-            </div>
-             <div class="resume-item pb-0">
-              <h4> Database System Implementation</h4>
-              <p><em>Projects done under supervision of Prof. Alin Dobra (M.S. C.S.,UF) </em></p>
-              <ul>
-                <li> Implemented various fundamental components of database systems such as
-Heap file, Sorted heap file, Statistical estimation, B+ trees , and database operations..</li>
-              </ul>
-            </div>
-             <div class="resume-item pb-0">
-              <h4> Software  Engineering</h4>
-              <p><em>Projects done under supervision of Prof. Steve Thebaut (M.S. C.S.,UF) </em></p>
-              <ul>
-                <li>Case Studies on software design and testing models such as TDD/TFD, MVQ Model,
-EaaSy Framework , Cloud , MicroServices, CI/CD , IOT etc..</li>
-
-              </ul>
-            </div>
-             <div class="resume-item pb-0">
-              <h4> Computer networks</h4>
-              <p><em>Projects done under supervision of Prof. Ahmed Helmy (M.S. C.S.,UF) </em></p>
-              <ul>
-                <li>Implemented packet monitoring using wireshark on UDP client - server sockets.</li>
-              </ul>
-            </div>
-
-          </div>
-
-
-          <div class="col-lg-6">
+            <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
               <div class="resume-item">
               <h4>Software Engineer ,  Walmart Global Tech, Bentonville, Arkansas, USA</h4>
@@ -421,6 +370,57 @@ Role: Designed and developed application to automate the open text content serve
               </ul>
             </div>
           </div>
+            <h3 class="resume-title">Academic Projects</h3>
+            <div class="resume-item">
+              <h4>Machine Learning and Pattern Recognition</h4>
+              <p><em>Projects done under supervision of Prof. Dapeng Vu and  Prof. Kejun Huang , (M.S.,UF) </em></p>
+               <ul>
+               <li> Implemented Object detection ML model using weakly supervised learning , convolution neural network , and Grad-Cam algorithm.</li>
+              </ul>
+            </div>
+            <div class="resume-item pb-0">
+              <h4>Distributed Operating Systems</h4>
+              <p><em>Projects done under supervision of Prof. Alin Dobra  (M.S. C.S.,UF)</em></p>
+               <ul>
+               <li>Implemented Gossip and Pastry Protocols , twitter API simulator, using F# and web sockets.This twitter simulator was designed to handle load of 10000 users on an average config machine</li>
+              </ul>
+            </div>
+            <div class="resume-item pb-0">
+              <h4> Advanced Data Structures</h4>
+              <p><em>Projects done under supervision of Prof. Sartaj Sahni (M.S. C.S.,UF)</em></p>
+              <ul>
+                <li>Developed City Planner System , and implemented Minheap and RedBlack tree from scratch..</li>
+              </ul>
+            </div>
+             <div class="resume-item pb-0">
+              <h4> Database System Implementation</h4>
+              <p><em>Projects done under supervision of Prof. Alin Dobra (M.S. C.S.,UF) </em></p>
+              <ul>
+                <li> Implemented various fundamental components of database systems such as
+Heap file, Sorted heap file, Statistical estimation, B+ trees , and database operations..</li>
+              </ul>
+            </div>
+             <div class="resume-item pb-0">
+              <h4> Software  Engineering</h4>
+              <p><em>Projects done under supervision of Prof. Steve Thebaut (M.S. C.S.,UF) </em></p>
+              <ul>
+                <li>Case Studies on software design and testing models such as TDD/TFD, MVQ Model,
+EaaSy Framework , Cloud , MicroServices, CI/CD , IOT etc..</li>
+
+              </ul>
+            </div>
+             <div class="resume-item pb-0">
+              <h4> Computer networks</h4>
+              <p><em>Projects done under supervision of Prof. Ahmed Helmy (M.S. C.S.,UF) </em></p>
+              <ul>
+                <li>Implemented packet monitoring using wireshark on UDP client - server sockets.</li>
+              </ul>
+            </div>
+
+          </div>
+
+
+
         </div>
         <div class="text-center">
           <a type="submit" href= "{% static 'portfolio/vikaschaubeyresume.pdf' %}" download>Download Resume <i class="bx bx-cloud-download"></i></a>
